--- a/src/main/webapp/frameworks/css/calc_style.css
+++ b/src/main/webapp/frameworks/css/calc_style.css
@@ -3,9 +3,15 @@
     border-radius: 10px;
     border: 2px solid;
     background: #eeeeee;
+    width: 260px;
+    margin: 0px auto 20px;
 }
 
 .btn {
-    width: 55px;
+    width: 50px;
     border-radius: 12px;
+}
+
+.form-control{
+    border: 2px solid;
 }
