--- a/src/main/webapp/css/calc_style.css
+++ b/src/main/webapp/css/calc_style.css
@@ -18,7 +18,7 @@
 
 body {
     background-color: #999;
-    background-image: url(../../images/bg.jpg);
+    background-image: url(../images/bg.jpg);
     background-size: cover;
 }
 
